bug(sunnyMenu):removed z-index option because of hor scroll issue

--- a/public/stylesheets/codecademy/sunnyMenu.css
+++ b/public/stylesheets/codecademy/sunnyMenu.css
@@ -9,12 +9,8 @@ body p {
     font-size: 16px;
 }
 
-.main .container{
-    background:#fff;
-    z-index: 0;
-    margin: -70px auto 80px;
-    padding:80px 10px 80px 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+.main{
+    padding-bottom: 45px;
 }
 
 .header h1 {
